--- a/Analog-clock/README.me
+++ b/Analog-clock/README.me
@@ -1,1 +1,43 @@
-s
+## Analog Watch - HTML, CSS & JavaScript
+
+This repository contains a simple analog watch built using HTML, CSS, and JavaScript. 
+
+### Features
+
+* Displays the current time with moving hands.
+* Clean and customizable design.
+
+### Getting Started
+
+1. Clone this repository:
+
+   ```bash
+   git clone https://github.com/Shoyabk1707/Javascript-Projects/Analog-clock
+.git
+   ```
+
+2. Open the `index.html` file in your web browser.
+
+3.  You can try out by visiting: [click here ](https://dancing-sunflower-bf5efe.netlify.app/)
+
+### Customization
+
+You can customize the appearance of the watch by editing the `style.css` file. 
+
+* Change colors, fonts, and sizes to match your preferences.
+
+### How it Works
+
+The project utilizes the following technologies:
+
+* **HTML:** Defines the structure of the watch face and elements.
+* **CSS:** Styles the visual appearance of the watch.
+* **JavaScript:** Retrieves the current time and updates the position of the hands based on the time.
+
+### Contributing
+
+Feel free to fork this repository and make improvements! You can add features, enhance the design, or fix any bugs you encounter.
+
+### License
+
+This project is licensed under the MIT License. See the `LICENSE` file for details.
